# aoc

./: .gitignore
2023/: README.md  pyproject.toml
2023/solutions/: 1a.py
2023/src/: 1.py  1a.py  2.py  2a.py  3.py  3a.py  4.py  4a.py  5.py  main.py  utils.py
