[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["Jahdah Thelen <jahdah.thelen@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
natsort = "^8.4.0"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc23 ="src.main:main"

[tool.poetry.plugins."aoc23.days"]
1 = "src.1:main"
2 = "src.2:main"
3 = "src.3:main"
4 = "src.4:main"
