[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["Jahdah Thelen <jahdah.thelen@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
natsort = "^8.4.0"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc23 ="src.main:main"

[tool.poetry.plugins."aoc23.days"]
1 = "src.1"
2 = "src.2"
3 = "src.3"
4 = "src.4"
5 = "src.5"
6 = "src.6"
7 = "src.7"
8 = "src.8"
9 = "src.9"
10 = "src.10"
11 = "src.11"
12 = "src.12"
13 = "src.13"
14 = "src.14"
15 = "src.15"
16 = "src.16"
17 = "src.17"
18 = "src.18"
19 = "src.19"
20 = "src.20"
21 = "src.21"
22 = "src.22"
23 = "src.23"
24 = "src.24"
25 = "src.25"
